# hermes-harness

./: .env.example  .gitignore  README.md  SKILL.md  config.yaml  pyproject.toml  requirements.txt
agents/coder/: RULES.md
agents/qa/: RULES.md
agents/reviewer/: RULES.md
agents/router/: SYSTEM_PROMPT.md
agents/ship/: RULES.md
docs/: long-task-support.md
gstack-mappings/: gstack-mappings.yaml
hermes_harness/: harness_analyze.py  harness_checkpoint.py  harness_claude_code.py  harness_log.py  harness_router.py
tests/: conftest.py
tests/e2e/: test_browser.py
tests/integration/: test_hg_commands.py
tests/unit/: test_harness_analyze.py  test_harness_checkpoint.py  test_harness_claude_code.py  test_harness_log.py  test_harness_router.py
